Added ability to create new API-tokens - POST to `/api-keys`   - updated documentation - Split out  API middleware from API router - changes default log level to `info`
__Extra__

- Fixed a bug where GET `/projects` was returning objects instead
of strings
- Added a few more places where data is logged
- added the `logger` config to the README
- Added in more `connection.release()`'s where they were missing
- corrected the TRUE/FALSE mapping in permissions
  - I should really overhaul the whole thing tbh
