# src/index.js
@@ -37,12 +37,15 @@ new Promise((res, rej) => {
 
     //Import and assign routers:
     const RequestLogger = require('./apiRouting/requestLogger.js');
+    const ApiKeyMiddleware = require('./apiRouting/apiKeyMiddleware.js')(connectionPool);
     const ApiKeyRouter = require('./apiRouting/apiKeyRouter.js')(connectionPool);
     const ProjectsRouter = require('./apiRouting/projects.js')(connectionPool);
     const EpisodesRouter = require('./apiRouting/episodes.js')(connectionPool);
 
     app.use('*', RequestLogger);
-    app.use('*', ApiKeyRouter);
+    app.use('*', ApiKeyMiddleware);
+
+    app.use('/api-keys', ApiKeyRouter);
     app.use('/projects', ProjectsRouter);
     app.use('/episodes', EpisodesRouter);
     Logger.info('ServerStartup', 'Routers applied');
